--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "start": "node ./app/bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "lodash": "^3.10.1",
-    "mongoose": "^4.2.5",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "mongoose": "^4.4.4",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   }
 }
