--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^5.7.0",
     "lodash": "^3.10.1",
     "mongoose": "^4.4.4",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   }
 }
